@@ -3,14 +3,18 @@ Hash: SHA1
 
 DIST SDL-2.536.tar.gz 2485524 RMD160 43ad9f55cad8ca1cd988a7a9b535e432e6928459 SHA1 27c19c2f3e0d254c1c03865993fc29aa9a88d028 SHA256 f702ce2ee513f1895c2ede778d3719988e96b4a2aed52fa00887a420c8d6e900
 DIST SDL_Perl-v2.2.6.tar.gz 913498 RMD160 1a6d779c05d97c691e9a3673e83ca650142a0d0a SHA1 f4a0e630374ab0277071351094ce91faf9c366e3 SHA256 a3fbf0213855629fefab9fa3431053ad646e175e9daa8e9796be1d84a5c32061
-EBUILD SDL-2.2.6.ebuild 1044 RMD160 3cb1abec20cfe9e680edaa9edd3af419b20d52ee SHA1 e0f76f210d3d7df7a5bbed0f485901fec2219305 SHA256 752370198490bc2ac9b1cb5b1f52a68620b85f0e67c45d77c4e2acc658ba71dd
+EBUILD SDL-2.2.6.ebuild 1042 RMD160 c7016854999d021d81de0bb54a140b3c58b1d16e SHA1 a008c3694f35cfd396db23b248431f7fd76b4d5e SHA256 f92882786d313f78a3bd0029c24300518bd165ad2b873484b9b57618dfef0047
 EBUILD SDL-2.536.ebuild 1073 RMD160 9b029cc5f087b81f796a2b0b6e6b5174fb0c7343 SHA1 9dba808efebd653bcec7bf4e6f1dafa834e6150a SHA256 94c9896dce4f7be2ac8adcca36a97b4a6df39ca815371692e6e3eb23bdb09938
-MISC ChangeLog 10950 RMD160 734e78b71a5b4aa242361de23dbf55adaeb97419 SHA1 d0b1211ae805ffcbf38f5f6666897ceae4fcb03d SHA256 b7b39b6153992107282fbbef689fbe3489d0f7eb2237cee3fcb067fe3b255fec
+MISC ChangeLog 11061 RMD160 2061bc567f9b8a0507cf31894b692303f8cd0b64 SHA1 ff683215f3d96c18e7f8a7bae8c05514a6b85037 SHA256 0bee7481a28c4504a08d8b875daf41d108128fc8c2ae8c8740d54447b9eeb841
 MISC metadata.xml 284 RMD160 4b633d2fdfd525ae08dd7938c9ae604582d6c8b4 SHA1 6cb74e33dba68a1e8bac735d9effbc25d7e27244 SHA256 a2beebdaaef1ee83bf47502e9b6e180ae6ea4cb0b6758498a1e7d5d971b1c436
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk8kQ9MACgkQuQc30/atMkCiFwCglL8pDgnHu3wVdeJRbIFONzK8
-WawAn2hIybFtGCYPeE5xhYhNXKGM5ASD
-=oaTc
+iQEcBAEBAgAGBQJPJxpxAAoJEEdUh39IaPFN0IUH/393CnuDZtTMYs7kbWc0uflM
+2jP9qXCaot0KKacAmT+3g9zUVsGExp4tej9NSfVuG4oER5T8pAvUTUInK5cj/fK9
+JSJULzD7+ArcbdJSnyskGqprL6p2hYQ9aprDhiGK6BPx7v1PiO53QlufYx554Gta
+feCENAKjr1uA/shG1JeKgJXtbUQD09FBreIVyrVbs3+voF2xkw86p9np7KFm7Wbo
+f0IVax3eRfFkUeHQ9N+xgJ48pNlKhD9BZYvr7kqqGItAvqjQtqFxmJstNWWakbh9
+hrckkLhK2hpUun6zjdm4lsEPI0OFT0eTAm6eg4pdtmI+uFI6KGESRHoQASKT7ro=
+=Jrkw
 -----END PGP SIGNATURE-----
