@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/SDL/SDL-2.2.6.ebuild,v 1.2 2012/01/28 18:51:57 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/SDL/SDL-2.2.6.ebuild,v 1.3 2012/01/30 22:34:44 ssuominen Exp $
 
 EAPI=4
 
@@ -14,7 +14,7 @@ HOMEPAGE="http://sdl.perl.org/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 hppa ppc x86"
+KEYWORDS="amd64 hppa x86"
 IUSE="truetype mpeg"
 
 # Only enable this if you are confirming a bug in this module. The testsrequire
