@@ -2,13 +2,17 @@
 Hash: SHA1
 
 DIST frozen-bubble-2.2.0.tar.bz2 20585572 RMD160 1bbe0163c28421c497979c85a98f64a98174c780 SHA1 df5a8c839a76fd662777925b2eb80fcb8adf3fa6 SHA256 dada92322ef3adb75df7a4270b2e76c572c3f8e42006ed3a5aaeefa68fcaa5b7
-EBUILD frozen-bubble-2.2.0.ebuild 1645 RMD160 6db65a3dd7c8fd0689e3be843962a8fe08e7d5ae SHA1 da7d935665de12794271655a341fe16909bca95b SHA256 38af52f10ef78be96ac0007483096602e221c6230948321beb4d8a8d43c73a7c
-MISC ChangeLog 9018 RMD160 15daaeeb990ff0215aeabf449231b11844a0e0f2 SHA1 223218a05d06c8c9841e3691a46010b9711b79c7 SHA256 780f20ccac776d6808f4e65e7c48edcdfac53be55fa3877f1e3d3af3457d204c
+EBUILD frozen-bubble-2.2.0.ebuild 1643 RMD160 f59a09e9397b88c1343925f399648bb88291ed0a SHA1 7d7647d5ea7add0b8c66b1ef100ec8551939bc8e SHA256 f984ff8159c1249137bd93997ee8eccf81847d47b00e285b9aa571d352152f0f
+MISC ChangeLog 9141 RMD160 45692e9d263849c90b0f6db741e68631fd865d72 SHA1 3a483c5862419c42ea45c104830525bc50d9d78e SHA256 deabaacca944ec46dc771c0b8341f5eb4b6de330faa68940d26268bea891a1a7
 MISC metadata.xml 449 RMD160 b8f34def5d742659506da917a43d62bc670167af SHA1 a13893053f32b670f7ed6c49d666cb9631f49c11 SHA256 63337ec457363a86ff999264ec10ee614f5156160a57371d278122c167470602
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk8kQ4YACgkQuQc30/atMkDt3ACdHC1SHozsmFjnLW1c1bO+08Ij
-pHwAni0hIrRXy7EtQTe0HRsMVS4L+vvM
-=EFIb
+iQEcBAEBAgAGBQJPJxpCAAoJEEdUh39IaPFNtGQH/iPzLMBpZZx9XpiAP+0fLNZu
+lrED4AsU2MFF8wBQ5OOKnAriGAp09V9+wePp/tLmo+yBSzbF4SFyPSUA2nin1U9w
+qMInmeeIvTIYNDGicJgGEzoJ80TRg0PBohZOguDVeG+OC9fMY0dqNLaafQB2rn9H
+9vkc1O6N8GQW+mx7W2sT7Y7I9f/cI1Qa2NIwczG4RFOvA3IajNXHWorPmujnpNlT
+AiavekNQyjZDYYvUwP0Ym0JIO8MrdFnC8C7mtHsVzTkJf6ooEHzpsTNrWZlwtPpc
+epBvx0deAP52vi5ZTrtsvJM6AU0P/MDto/BoRAYsDz5oexqEvV3UWHHDM2MzVZM=
+=BF/P
 -----END PGP SIGNATURE-----
