@@ -1,6 +1,10 @@
 # ChangeLog for games-arcade/frozen-bubble
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/frozen-bubble/ChangeLog,v 1.40 2012/01/28 18:50:40 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/frozen-bubble/ChangeLog,v 1.41 2012/01/30 22:33:57 ssuominen Exp $
+
+  30 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
+  frozen-bubble-2.2.0.ebuild:
+  Remove ppc keywording wrt #399649
 
   28 Jan 2012; Raúl Porcel <armin76@gentoo.org> frozen-bubble-2.2.0.ebuild:
   Drop alpha/ia64/sparc keywords
