@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/SDL
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/SDL/ChangeLog,v 1.3 2012/01/28 18:51:57 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/SDL/ChangeLog,v 1.4 2012/01/30 22:34:44 ssuominen Exp $
+
+  30 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> SDL-2.2.6.ebuild:
+  Remove ppc keywording wrt #399649
 
   28 Jan 2012; Raúl Porcel <armin76@gentoo.org> SDL-2.2.6.ebuild:
   Drop alpha/ia64/sparc keywords
